# designing-real-world-ai-agents-workshop

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  streamlit_app.py
datasets/linkedin_paul_iusztin/: 6-months-ago-i-never-imagined-id-be-hosting-my-own-ai-event.md  90-of-engineers-think-context-engineering-is-just-about-writ.md  99-of-engineers-skip-the-most-important-part-of-building-age.md  before-you-think-about-rag-agents-or-fine-tuning-you-need-to.md  heres-the-ingestion-architecture-we-used-to-build-a-digital.md  how-do-you-stay-up-to-date-with-everything-in-ai.md  i-was-a-true-believer-in-clean-architecture.md  i-was-a-true-believer-in-clean-architecture_generated.md  if-theres-one-thing-thats-helped-me-more-than-anything-as-an.md  if-youre-building-ai-agents-in-2026-save-this-cheatsheet.md  im-currently-designing-a-second-brain-ai-agent.md  in-2023-it-was-predicted-that-ai-would-replace-up-to-80-of-d.md  in-the-early-days-of-llms-context-just-meant-plugging-a-few.md  index.yaml  ive-been-an-engineer-in-the-ai-space-for-8-years.md  ive-spent-the-past-2-years-productionizing-ai-agents.md  (+7 more)
implement_yourself/: .env.example  .mcp.json  CLAUDE.md  Makefile  README.md  pyproject.toml  streamlit_app.py
inputs/: guideline.md  seed.md
scripts/: generate_dataset.py  label_dataset.py  run_dataset_writing.py  run_evaluation.py  run_online_evaluation.py  test_research_workflow.py  test_writing_workflow.py  upload_eval_dataset.py
src/research/: README.md  server.py
test_skill/: guideline.md  post.md  research.md  seed.md
(+162 files in other folders)
